--- a/Plugins/Infoavan.Plugins/Infoavan.Plugins/packages.config
+++ b/Plugins/Infoavan.Plugins/Infoavan.Plugins/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ILMerge" version="2.14.1203" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.33" targetFramework="net472" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
 </packages>
